--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["James Waples <jamwaffles@gmail.com>"]
 categories = ["embedded", "no-std"]
 description = "I2C driver for the IS31FL3193 RGB LED driver"
 documentation = "https://docs.rs/is31fl3193"
-keywords = ["no-std", "is31fl3193", "RGB", "LED","LUMISSIL","embedded", "embedded-hal-driver"]
+keywords = ["no-std", "is31fl3193", "RGB", "embedded", "embedded-hal-driver"]
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/papyDoctor/is31fl3193"
